[package]
name = "etherinit"
version = "0.2.10"
authors = ["fstnetwork <admin@fstk.io>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
ethereum-types = "0.5"
ethsign = { git = "https://github.com/fstnetwork/ethsign", tag = "v0.5.1", features = [ "pure-rust" ] }
failure = "0.1"
futures = "0.1"
hdwallet = { git = "https://github.com/fstnetwork/hdwallet-rs", tag = "v0.1.0" }
hyper = "0.12"
lazy_static = "1.2"
log = "0.4"
parking_lot = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple-logging = "2.0"
structopt = "0.2"
tokio = "0.1.17"
tokio-process = "0.2"
tokio-signal = "0.2"
tokio-timer = "0.2"
toml = "0.4"
tower-web = "0.3"
url = "1.7"
web3 = { git = "https://github.com/fstnetwork/rust-web3", branch = "develop", features = [ "ipc" ] }

[profile.release]
lto = true
